# advent-of-code

./: .dir-locals.el  .gitignore  Cargo.toml
2015/ruby/: 01.rb  02.rb  03.rb  04.rb
2015/rust/: Cargo.toml
2015/rust/day_1/src/: main.rs
2015/rust/day_10/src/: main.rs
2015/rust/day_11/src/: main.rs
2015/rust/day_12/src/: main.rs
2015/rust/day_13/src/: main.rs
2015/rust/day_14/src/: main.rs
2015/rust/day_15/src/: main.rs
2015/rust/day_16/src/: main.rs
2015/rust/day_17/src/: main.rs
2015/rust/day_2/src/: main.rs
2015/rust/day_3/src/: main.rs
2015/rust/day_4/src/: main.rs
2015/rust/day_5/src/: main.rs
2015/rust/day_6/src/: main.rs
2015/rust/day_7/src/: main.rs
2015/rust/day_8/src/: main.rs
2015/rust/day_9/src/: main.rs
2022/: day-5.py  day-6.py  day-7.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_2.py  day_5.py  day_7.py  day_8.py  day_9.py  eots_assets.py
2022/python/: pyproject.toml
2022/python/day_1/: day_1.py
2022/python/day_10/: day_10.py
2022/python/day_13/: day_13.py
2022/python/day_3/: day_3.py
2022/python/day_4/: day_4.py
2022/python/day_6/: day_6.py
2022/python/day_9/: day_9.py
2022/python/python/: 1.py  10.py  11.py  12.py  13.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2022/rust/: .dir-locals.el  Cargo.toml
2022/rust-bak/day_1/src/: main.rs
2022/rust-bak/day_2b/src/: main.rs
2022/rust-bak/day_5a/src/: main.rs
2022/rust-bak/day_6a/src/: main.rs
2022/rust-bak/day_6b/: Cargo.toml
2022/rust-bak/day_7a/src/filesystem/: filesystem.rs
2022/rust-bak/day_7b/: Cargo.toml
2022/rust-bak/day_7b/src/: main.rs
2022/rust-bak/day_7b/src/filesystem/: filesystem.rs  interface.rs
2022/rust-bak/day_8a/: Cargo.toml
2022/rust/day_1/src/: main.rs
2022/rust/day_2/src/: main.rs
2022/rust/day_2a/src/: main.rs
2022/rust/day_2b/src/: main.rs
2022/rust/day_3a/src/: main.rs
2022/rust/day_3b/: Cargo.toml
2022/rust/day_3b/src/: main.rs
2022/rust/day_4a/src/: main.rs
2022/rust/day_4b/src/: main.rs
2022/rust/day_5a/: Cargo.toml
2022/rust/day_5a/src/: main.rs
2022/rust/day_5b/src/: main.rs
2022/rust/day_6b/src/: main.rs
2022/rust/day_7a/: Cargo.toml
2022/rust/day_7a/src/: main.rs
2022/rust/day_7a/src/filesystem/: filesystem.rs
2023/data/: 1.txt
2023/python/: pyproject.toml
2023/python/python/: 1.py  2.py  3.py  4.py  __init__.py
2023/rust/: Cargo.toml  output.txt
2024/c++/: CMakeLists.txt
2024/c++/src/: 1.cpp  PuzzleInput.cpp  PuzzleInput.h  Split.h
2024/data/: 6.txt  7.txt
2024/python/: pyproject.toml
2024/python/python/: 1.py  __init__.py
2024/rust/: Cargo.toml
2025/python/: pyproject.toml
2025/python/python/: 1.py  __init__.py
rust/: Cargo.toml
rust/src/2023/src/: main.rs
utils/python/: pyproject.toml
utils/python/python/: puzzle.py
utils/rust/src/: lib.rs  puzzle.rs
