[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "2015/rust",
  "2022/rust",
  "2023/rust",
  "2024/rust"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "aoc"
path = "utils/rust/src/lib.rs"
