[package]
name = "year_2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../../utils/rust" }
itertools = "0.12.0"
md5 = "0.7.0"
regex = "1.10.2"
serde_json = "1.0.108"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
