[tool.poetry]
name = "year_2023"
version = "0.1.0"
description = ""
authors = ["noprobelm <noprobelm@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "python" }
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
regex = "^2023.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
1 = 'python.1:main'
2 = 'python.2:main'
3 = 'python.3:main'
4 = 'python.4:main'
