[tool.poetry]
name = "year_2024"
version = "0.1.0"
description = ""
authors = ["noprobelm <noprobelm@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "python" }
]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
1 = 'python.1:main'
